# ML-Engineering

./: README.md
.dvc/: config
1.Core_ideas_&_Preparation_for_the_course/: README.md
2.Containerization/: README.md
2.Containerization/Regression/: .dockerignore  Dockerfile  README.md  requirements.txt  train.py
3.Data_governance/: README.md
3.Data_governance/Pipeline1/: dvc.yaml
3.Data_governance/Pipeline1/data/: iris.csv.dvc
3.Data_governance/Pipeline1/scripts/: evaluate_model.py  preprocess_data.py  train_model.py
3.Data_governance/Pipeline2/: dvc.yaml
3.Data_governance/Pipeline2/models/: accuracy.txt
3.Data_governance/Pipeline2/scripts/: evaluate_model.py  preprocess_data.py  train_model.py
3.Data_governance/Pipeline3/: dvc.yaml
3.Data_governance/Pipeline3/data/: housing.csv.dvc
3.Data_governance/Pipeline3/models/: rmse.txt
3.Data_governance/Pipeline3/scripts/: evaluate_model.py  preprocess_data.py  train_model.py
4.Experiment_tracking/: README.md  docker-compose.yml
4.Experiment_tracking/Classification/: Dockerfile  Dockerfile.python  requirements.txt  train.py
4.Experiment_tracking/MlFlow_Server/: Dockerfile.mlflow
5.Pipelines/: README.md
6.Model_deployment/: Dockerfile  README.md  cron.txt  pyproject.toml  requirements.txt
6.Model_deployment/classification/: batch_prediction.py  online_prediction.py  train.py  utils.py
6.Model_deployment/tests/: test_model.py
7.Deployment_of_Model_Serving_Endpoint_to_the_Cloud_(AWS)/online_deployment_aws/: Dockerfile  README.md  prediction.py  requirements.txt  result.json  test.py
(+6 files in other folders)
