[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "titanic_prediction_model"
version = "0.0.1"
authors = [
  { name="Ashot", email="ashotnersisyan1996@gmail.com" },
]
description = "Fast API Serving Titanic Classification"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/titanicfastapi"
"Bug Tracker" = "https://github.com/pypa/titanicfastapi/issues"